package com.programacaoiii.assistencia_tecnica.modelos.enums;

public enum TipoHardware {
	COMPUTADOR,
	NOTEBOOK,
	CELULAR,
	OUTROS,
}
