package com.programacaoiii.assistencia_tecnica.servicos;

public interface Relatorio {
	public void verRelatorioFinanceiro();
	public void verRelatorioEstoque();
	public void verRelatorioOS();
}
